public/style.css
body {
  font-family: sans-serif;
  background-color: #dfe6e9;
}

a {
  text-decoration: none;
}

label {
  display: block;
}

nav a {
  display: inline-block;
  margin: 1em;
}

form div {
  margin: 1em;
  display: inline-block;
}

div {
  display: inline;
}

h1 {
  display: inline;
  font-size: 10pt;
  color: blue;
}

.meta {
  color: red;
}

.active {
  background-color: #ffff00;
}

body:hover {
  cursor: pointer;
}

input {
  height: 30px;
  width: 400px;
  /* border-radius: 5px 0 0 5px; */
  border-top: 1px solid #ccc;
  border-bottom: 1px solid #ccc;
  font-size: 0.9em;
  margin-left: 0;
}

#html-body {
  background-color: #f1f2f6;
  /* display: block; */
  margin: 20px auto 20px auto;
  padding: 5px;
  width: 90vw;
  height: 100vh;
  display: flex;
  flex-direction: column;
  flex-wrap: wrap;

  /* overflow-wrap: break-word; */
}

.html-element {
  padding-left: 10px;
  overflow-wrap: break-word;
  font-family: monospace;
}

/* #page-container {
  display: flex;
  justify-content: center;
  flex-direction: column;
} */

button {
  height: 34px;
  width: 60px;
  border-radius: 0 5px 5px 0;
  font-size: 10pt;
  background-color: #1174db;
  color: white;
}

button:hover {
  background-color: #5ba9fb;
  cursor: pointer;
}

#search-bar {
  /* margin: 20px auto 5px auto; */
  display: flex;
  justify-content: center;
  align-items: center;
}

#https {
  height: 30px;
  width: 60px;
  background-color: white;
  text-align: center;
  font-size: 13pt;
  margin-right: 0;
}

/* .tab {
  text-indent: 150px each-line;
}

.tab2 {
  text-indent: 150px each-line;
} */

pre {
  white-space: pre-wrap; /* Since CSS 2.1 */
  white-space: -moz-pre-wrap; /* Mozilla, since 1999 */
  white-space: -pre-wrap; /* Opera 4-6 */
  white-space: -o-pre-wrap; /* Opera 7 */
  word-wrap: break-word;
}

.error-message {
  color: red;
  font-size: 11pt;
  /* text-align: center; */
  margin: auto;
  display: block;
  font-weight: 200;
}

